[package]
name = "cuzi"
version = "0.1.0"
edition = "2021"

[dependencies]
mio = { version = "0.8", features = ["net", "os-poll"] }
tokio = { version = "1", features = ["full"] }
colored = "2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
anyhow = "1.0.75"
pretty_env_logger = "0.5.0"
log = "0.4.20"
tokio-rustls ={ version = "0.24.1", default-features = false }
webpki-roots = "0.25.2"